# tabbycat-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  install.sh
.github/workflows/: release.yml  test.yml
data/: clashes.csv  institutions.csv  judges.csv  teams.csv
src/: api_utils.rs  break_eligibility.rs  clear_rooms.rs  dispatch_req.rs  edit_draw.rs  export.rs  import.rs  main.rs  request_manager.rs  save_panels.rs  sensible.rs  sqlite.rs  view_draw.rs
tests/: main.rs
