[package]
name = "tabbycat"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/teymour-aldridge/tabbycat-import"
license = "BSD-3-Clause"

[dependencies]
attohttpc = { version = "0.30.0", features = [
    "json",
    "tls-rustls-webpki-roots",
], default-features = false }
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
dirs = "6.0.0"
itertools = "0.14.0"
rpassword = "7.4.0"
rustls = "0.23.29"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tabbycat-api = { git = "https://git.sr.ht/~teymour/tabbycat-api/", branch = "rustls", version = "0.1.0" }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
