[package]
name = "tabbycat"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/teymour-aldridge/tabbycat-import"
license = "BSD-3-Clause"

[dependencies]
attohttpc = { version = "0.30.1", features = [
    "json",
    "tls-rustls-webpki-roots",
], default-features = false }
clap = { version = "4.5.47", features = ["derive"] }
csv = "1.3.1"
dirs = "6.0.0"
itertools = "0.14.0"
rpassword = "7.4.0"
rustls = "0.23.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tabbycat-api = { git = "https://git.sr.ht/~teymour/tabbycat-api/", version = "0.1.0" }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
