[package]
name = "tabbycat"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/teymour-aldridge/tabbycat-import"
license = "BSD-3-Clause"

[dependencies]
attohttpc = { version = "0.30.1", features = [
    "json",
    "tls-rustls-webpki-roots",
], default-features = false }
clap = { version = "4.5.48", features = ["derive"] }
comfy-table = "7.2.1"
csv = "1.3.1"
dirs = "6.0.0"
itertools = "0.14.0"
reqwest = "0.12.24"
rpassword = "7.4.0"
rusqlite = "0.37.0"
rustls = "0.23.32"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tabbycat-api = { git = "https://git.sr.ht/~teymour/tabbycat-api/", version = "0.1.0" }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
